update to run on matrix 36proc

--- a/satellite_playground.ipynb
+++ b/satellite_playground.ipynb
@@ -264,7 +264,8 @@
     "    \"sentinel2a\": 40697,\n",
     "    \"noaa20\": 43013,\n",
     "    \"landsat9\": 49260,\n",
-    "    \"noaa21\": 54234\n",
+    "    \"noaa21\": 54234,\n",
+    "    \"sentinel2c\":60989,\n",
     "}\n",
     "\n",
     "instrument_swath_widths = {\n",
@@ -300,14 +301,15 @@
    },
    "cell_type": "code",
    "source": [
-    "analyzer.get_satellite_history('terra')\n",
-    "terra_track = analyzer.ground_track('terra')\n",
+    "# analyzer.get_satellite_history('terra')\n",
+    "# terra_track = analyzer.ground_track('terra')\n",
     "aqua_track = analyzer.ground_track('aqua')\n",
-    "landsat8_track = analyzer.ground_track('landsat8')\n",
-    "sentinel2a_track = analyzer.ground_track('sentinel2a')\n",
+    "# landsat8_track = analyzer.ground_track('landsat8')\n",
+    "# sentinel2a_track = analyzer.ground_track('sentinel2a')\n",
     "noaa20_track = analyzer.ground_track('noaa20')\n",
-    "landsat9_track= analyzer.ground_track('landsat9')\n",
-    "noaa21_track = analyzer.ground_track('noaa21')"
+    "# landsat9_track= analyzer.ground_track('landsat9')\n",
+    "# noaa21_track = analyzer.ground_track('noaa21')\n",
+    "sentinel2c_track = analyzer.ground_track('sentinel2c')"
    ],
    "id": "34efa8fe86c06e20",
    "outputs": [],
