Update ouptput and add lat/lon filter

--- a/satellite_playground.ipynb
+++ b/satellite_playground.ipynb
@@ -1125,25 +1125,54 @@
    "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T17:43:40.844033Z",
+     "start_time": "2026-01-29T17:43:25.974465Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ff81917d01a124c"
+   "source": "groundtrack_intersections(aqua_track, noaa20_track)",
+   "id": "ff81917d01a124c",
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mgroundtrack_intersections\u001B[49m\u001B[43m(\u001B[49m\u001B[43maqua_track\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnoaa20_track\u001B[49m\u001B[43m)\u001B[49m \n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Downloads/examples-master 2/SatRemoteSens/sat_orbits.py:253\u001B[39m, in \u001B[36mgroundtrack_intersections\u001B[39m\u001B[34m(track1, track2, max_km, max_dt_sec)\u001B[39m\n\u001B[32m    250\u001B[39m intersections = []\n\u001B[32m    252\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m i, t1 \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(track1[\u001B[33m\"\u001B[39m\u001B[33mtime\u001B[39m\u001B[33m\"\u001B[39m]):\n\u001B[32m--> \u001B[39m\u001B[32m253\u001B[39m     dt = \u001B[38;5;28mabs\u001B[39m(track2[\u001B[33m\"\u001B[39m\u001B[33mtime\u001B[39m\u001B[33m\"\u001B[39m] - t1)\n\u001B[32m    254\u001B[39m     idx = np.where(dt < timedelta(seconds=max_dt_sec))[\u001B[32m0\u001B[39m]\n\u001B[32m    256\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m idx:\n",
+      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-28T16:59:55.933410Z",
-     "start_time": "2026-01-28T16:59:55.932255Z"
+     "end_time": "2026-01-29T18:03:39.060416Z",
+     "start_time": "2026-01-29T18:03:39.054347Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "lambda x: x[0]",
    "id": "35030895f0616a4e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
