change lat/lon to 60S - 60N

--- a/satellite_playground.ipynb
+++ b/satellite_playground.ipynb
@@ -1175,12 +1175,43 @@
    "execution_count": 8
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T18:25:44.935897Z",
+     "start_time": "2026-01-29T18:25:44.932406Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sentinel2c_track['times']",
+   "id": "cb1626046536f893",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([datetime.datetime(2024, 9, 5, 3, 47, 19, 751137, tzinfo=datetime.timezone.utc),\n",
+       "       datetime.datetime(2024, 9, 5, 3, 47, 50, 844068, tzinfo=datetime.timezone.utc),\n",
+       "       datetime.datetime(2024, 9, 5, 3, 48, 21, 936960, tzinfo=datetime.timezone.utc),\n",
+       "       ...,\n",
+       "       datetime.datetime(2026, 1, 8, 16, 36, 49, 571198, tzinfo=datetime.timezone.utc),\n",
+       "       datetime.datetime(2026, 1, 8, 17, 10, 32, 313677, tzinfo=datetime.timezone.utc),\n",
+       "       datetime.datetime(2026, 1, 8, 17, 44, 15, 56156, tzinfo=datetime.timezone.utc)],\n",
+       "      shape=(323400,), dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "cb1626046536f893"
+   "id": "a55e4ab4cab76e47"
   }
  ],
  "metadata": {
