Files for rest of project

--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -6,163 +6,101 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:11.833221Z",
-     "start_time": "2026-02-04T17:39:11.802625Z"
+     "end_time": "2026-02-06T17:52:12.122756Z",
+     "start_time": "2026-02-06T17:52:12.117901Z"
     }
    },
-   "source": "from osgeo import gdal",
+   "source": [
+    "from osgeo import gdal\n",
+    "import rioxarray\n",
+    "import numpy as np\n",
+    "import pyhdf\n",
+    "from pyhdf.SD import SD, SDC\n",
+    "import xarray as xr\n",
+    "import matplotlib.pyplot as plt\n",
+    "import satpy\n",
+    "from satpy import Scene\n",
+    "from pathlib import Path\n",
+    "from glob import glob"
+   ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:12.016459Z",
-     "start_time": "2026-02-04T17:39:11.981477Z"
+     "end_time": "2026-02-06T17:53:14.274096Z",
+     "start_time": "2026-02-06T17:53:14.249955Z"
     }
    },
    "cell_type": "code",
-   "source": "dataset = gdal.Open('/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf')",
-   "id": "8ebd4e521401c30",
+   "source": "",
+   "id": "fb0aba95760bff3d",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cwelch/micromamba/envs/juice_r/lib/python3.11/site-packages/osgeo/gdal.py:311: FutureWarning: Neither gdal.UseExceptions() nor gdal.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
-      "  warnings.warn(\n"
+     "ename": "TypeError",
+     "evalue": "'PosixPath' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[26]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mglob\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodis_file\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/micromamba/envs/juice_r/lib/python3.11/glob.py:28\u001B[39m, in \u001B[36mglob\u001B[39m\u001B[34m(pathname, root_dir, dir_fd, recursive, include_hidden)\u001B[39m\n\u001B[32m     13\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mglob\u001B[39m(pathname, *, root_dir=\u001B[38;5;28;01mNone\u001B[39;00m, dir_fd=\u001B[38;5;28;01mNone\u001B[39;00m, recursive=\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[32m     14\u001B[39m         include_hidden=\u001B[38;5;28;01mFalse\u001B[39;00m):\n\u001B[32m     15\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"Return a list of paths matching a pathname pattern.\u001B[39;00m\n\u001B[32m     16\u001B[39m \n\u001B[32m     17\u001B[39m \u001B[33;03m    The pattern may contain simple shell-style wildcards a la\u001B[39;00m\n\u001B[32m   (...)\u001B[39m\u001B[32m     26\u001B[39m \u001B[33;03m    zero or more directories and subdirectories.\u001B[39;00m\n\u001B[32m     27\u001B[39m \u001B[33;03m    \"\"\"\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m28\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mlist\u001B[39m(\u001B[43miglob\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpathname\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mroot_dir\u001B[49m\u001B[43m=\u001B[49m\u001B[43mroot_dir\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdir_fd\u001B[49m\u001B[43m=\u001B[49m\u001B[43mdir_fd\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrecursive\u001B[49m\u001B[43m=\u001B[49m\u001B[43mrecursive\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     29\u001B[39m \u001B[43m                      \u001B[49m\u001B[43minclude_hidden\u001B[49m\u001B[43m=\u001B[49m\u001B[43minclude_hidden\u001B[49m\u001B[43m)\u001B[49m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/micromamba/envs/juice_r/lib/python3.11/glob.py:48\u001B[39m, in \u001B[36miglob\u001B[39m\u001B[34m(pathname, root_dir, dir_fd, recursive, include_hidden)\u001B[39m\n\u001B[32m     46\u001B[39m     root_dir = os.fspath(root_dir)\n\u001B[32m     47\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m---> \u001B[39m\u001B[32m48\u001B[39m     root_dir = \u001B[43mpathname\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[32;43m0\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[32m     49\u001B[39m it = _iglob(pathname, root_dir, dir_fd, recursive, \u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[32m     50\u001B[39m             include_hidden=include_hidden)\n\u001B[32m     51\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m pathname \u001B[38;5;129;01mor\u001B[39;00m recursive \u001B[38;5;129;01mand\u001B[39;00m _isrecursive(pathname[:\u001B[32m2\u001B[39m]):\n",
+      "\u001B[31mTypeError\u001B[39m: 'PosixPath' object is not subscriptable"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:12.154414Z",
-     "start_time": "2026-02-04T17:39:12.152309Z"
+     "end_time": "2026-02-06T17:53:34.683153Z",
+     "start_time": "2026-02-06T17:53:34.679335Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "subdatasets = dataset.GetSubDatasets()\n",
+    "modis_file = Path(\"/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf\")\n",
+    "modis_geolocation_file = Path('/Users/cwelch/Downloads/MOD03.A2025202.2305.061.2025203044315.hdf')\n",
+    "modis_file_list = glob(str(modis_file)) + glob(str(modis_geolocation_file))"
+   ],
+   "id": "ed03b61350596f81",
+   "outputs": [],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T18:03:59.269366Z",
+     "start_time": "2026-02-06T18:03:59.264499Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data_dir = Path(\"/Users/cwelch/Downloads\")\n",
+    "patterns = (\"MOD*2026*\", \"MYD*2026*\")\n",
+    "files = [str(p) for pat in patterns for p in data_dir.glob(pat)]"
+   ],
+   "id": "1d8357bdc1778ce6",
+   "outputs": [],
+   "execution_count": 50
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T18:04:01.465067Z",
+     "start_time": "2026-02-06T18:04:01.454064Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "\n",
-    "# Print the subdataset names to identify the one you need\n",
-    "print(\"Available subdatasets:\")\n",
-    "for i, sds in enumerate(subdatasets):\n",
-    "    print(f\"{i+1}: {sds[0]} - {sds[1]}\")"
-   ],
-   "id": "7d6b7e487d36adea",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available subdatasets:\n",
-      "1: HDF4_EOS:EOS_SWATH:\"/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf\":MODIS_SWATH_Type_L1B:EV_250_RefSB - [2x8120x5416] EV_250_RefSB MODIS_SWATH_Type_L1B (16-bit unsigned integer)\n",
-      "2: HDF4_EOS:EOS_SWATH:\"/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf\":MODIS_SWATH_Type_L1B:EV_250_RefSB_Uncert_Indexes - [2x8120x5416] EV_250_RefSB_Uncert_Indexes MODIS_SWATH_Type_L1B (8-bit unsigned integer)\n"
-     ]
-    }
-   ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:12.350285Z",
-     "start_time": "2026-02-04T17:39:12.348665Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sds = subdatasets[0][0]",
-   "id": "6cf97742cf65f224",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:13.003322Z",
-     "start_time": "2026-02-04T17:39:12.999990Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sds",
-   "id": "78bbbee8c988714b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'HDF4_EOS:EOS_SWATH:\"/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf\":MODIS_SWATH_Type_L1B:EV_250_RefSB'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:15.090484Z",
-     "start_time": "2026-02-04T17:39:13.695251Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "import rioxarray",
-   "id": "a7ca029c59b4d439",
-   "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:39:52.633276Z",
-     "start_time": "2026-02-04T17:39:52.533542Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "data_array = rioxarray.open_rasterio(sds)\n",
-   "id": "de955ce6e5d6b9ee",
-   "outputs": [],
-   "execution_count": 10
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "data_array[0][0][0]['spatial_ref']\n",
-   "id": "fc899a695a53acf7",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:45:10.337925Z",
-     "start_time": "2026-02-04T17:45:10.334337Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "import pyhdf",
-   "id": "74ad32f567e0f30d",
-   "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:46:10.079882Z",
-     "start_time": "2026-02-04T17:46:10.068741Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
     "from pyhdf.SD import SD, SDC\n",
     "\n",
     "# open file\n",
-    "hdf = SD('/Users/cwelch/Downloads/MOD02QKM.A2025202.2305.061.2025203072926.hdf', SDC.READ)\n",
+    "hdf = SD(str(modis_file), SDC.READ)\n",
     "\n",
     "# list datasets\n",
     "datasets = hdf.datasets()\n",
@@ -178,13 +116,99 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 51
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T17:49:33.282325Z",
-     "start_time": "2026-02-04T17:49:32.535777Z"
+     "end_time": "2026-02-06T18:04:01.765192Z",
+     "start_time": "2026-02-06T18:04:01.762216Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "files",
+   "id": "7b85799196237969",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/cwelch/Downloads/MOD03.A2026001.0005.061.2026001091851.hdf',\n",
+       " '/Users/cwelch/Downloads/MOD03.A2026001.0015.061.2026001091953.hdf',\n",
+       " '/Users/cwelch/Downloads/MOD03.A2026037.0000.061.2026037065158.hdf',\n",
+       " '/Users/cwelch/Downloads/MOD03.A2026001.0010.061.2026001091840.hdf',\n",
+       " '/Users/cwelch/Downloads/MOD03.A2026001.0000.061.2026001091836.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026001.0005.061.2026001155851.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026037.0025.061.2026037175600.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026037.0325.061.2026037175528.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026037.0015.061.2026037175301.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026001.0000.061.2026001160649.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026037.0020.061.2026037175311.hdf',\n",
+       " '/Users/cwelch/Downloads/MYD021KM.A2026037.0030.061.2026037175559.hdf']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 52
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T18:09:42.349588Z",
+     "start_time": "2026-02-06T18:09:42.088751Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "scn = Scene(files,\n",
+    "            reader='modis_l1b',\n",
+    "            reader_kwargs={'mask_saturated':True,}\n",
+    ")"
+   ],
+   "id": "4ceaff3ce4dbac5f",
+   "outputs": [],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T18:10:06.328647Z",
+     "start_time": "2026-02-06T18:10:06.307257Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scn.calibrate_bt()",
+   "id": "280415cab3cb0649",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Scene' object has no attribute 'calibrate_bt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[61]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mscn\u001B[49m\u001B[43m.\u001B[49m\u001B[43mcalibrate_bt\u001B[49m()\n",
+      "\u001B[31mAttributeError\u001B[39m: 'Scene' object has no attribute 'calibrate_bt'"
+     ]
+    }
+   ],
+   "execution_count": 61
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "78c77c1cecc17de7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T17:45:36.856433Z",
+     "start_time": "2026-02-06T17:45:36.049154Z"
     }
    },
    "cell_type": "code",
@@ -195,13 +219,13 @@
    ],
    "id": "ecc2883d9e4c1eb3",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-04T17:51:37.903810Z",
-     "start_time": "2026-02-04T17:51:37.898376Z"
+     "end_time": "2026-02-06T17:45:36.868204Z",
+     "start_time": "2026-02-06T17:45:36.864127Z"
     }
    },
    "cell_type": "code",
@@ -230,81 +254,12 @@
        " 'corrected_counts_units': 'counts'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:50:40.885213Z",
-     "start_time": "2026-02-04T17:50:40.881682Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(lat.shape)\n",
-    "print(lon.shape)"
-   ],
-   "id": "247c89a9e1ebf9",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2030, 1354)\n",
-      "(2030, 1354)\n"
-     ]
-    }
-   ],
-   "execution_count": 26
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:56:12.631252Z",
-     "start_time": "2026-02-04T17:56:12.625706Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "refl[0]",
-   "id": "3eb95ba16fa09751",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[65535, 65535, 65535, ..., 65535, 65535, 65535],\n",
-       "       [65535, 65535, 65535, ..., 65535, 65535, 65535],\n",
-       "       [65535, 65535, 65535, ..., 65535, 65535, 65535],\n",
-       "       ...,\n",
-       "       [  695,   697,   664, ...,  1677,  2191,  2628],\n",
-       "       [  719,   705,   690, ...,  1575,  2052,  2540],\n",
-       "       [  715,   705,   687, ...,  1502,  1793,  2442]],\n",
-       "      shape=(8120, 5416), dtype=uint16)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 38
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-04T17:57:22.798488Z",
-     "start_time": "2026-02-04T17:57:22.795193Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "import numpy as np",
-   "id": "b96ee83825d01e1a",
-   "outputs": [],
-   "execution_count": 39
+   "execution_count": 11
   },
   {
    "metadata": {
@@ -393,12 +348,25 @@
    "execution_count": 42
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-06T17:41:40.696250Z",
+     "start_time": "2026-02-06T17:41:40.693502Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "bbdc9a5a87358ca7",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "bbdc9a5a87358ca7"
+   "id": "2e4aaab6313b477b"
   }
  ],
  "metadata": {
