--- a/srs_satpy_tutorial.ipynb
+++ b/srs_satpy_tutorial.ipynb
@@ -14,31 +14,10 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-10T22:36:53.067877Z",
-     "start_time": "2026-02-10T22:36:53.064563Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print('test')",
-   "id": "a897380edc605393",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n"
-     ]
-    }
-   ],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.005780Z",
-     "start_time": "2026-02-10T18:08:32.001921Z"
+     "end_time": "2026-02-11T19:56:42.620094Z",
+     "start_time": "2026-02-11T19:56:40.809407Z"
     }
    },
    "cell_type": "code",
@@ -54,13 +33,13 @@
    ],
    "id": "368e693587626bc6",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.016570Z",
-     "start_time": "2026-02-10T18:08:32.010416Z"
+     "end_time": "2026-02-11T19:56:42.626920Z",
+     "start_time": "2026-02-11T19:56:42.623750Z"
     }
    },
    "cell_type": "code",
@@ -155,13 +134,13 @@
    ],
    "id": "2d656a3b20a2b996",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.023146Z",
-     "start_time": "2026-02-10T18:08:32.021503Z"
+     "end_time": "2026-02-11T19:56:42.631187Z",
+     "start_time": "2026-02-11T19:56:42.629718Z"
     }
    },
    "cell_type": "code",
@@ -175,13 +154,13 @@
    ],
    "id": "3a7fa92073a53070",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.030442Z",
-     "start_time": "2026-02-10T18:08:32.028042Z"
+     "end_time": "2026-02-11T19:56:42.638896Z",
+     "start_time": "2026-02-11T19:56:42.636314Z"
     }
    },
    "cell_type": "code",
@@ -207,13 +186,13 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.042478Z",
-     "start_time": "2026-02-10T18:08:32.040995Z"
+     "end_time": "2026-02-11T19:56:42.650830Z",
+     "start_time": "2026-02-11T19:56:42.649275Z"
     }
    },
    "cell_type": "code",
@@ -223,7 +202,7 @@
    ],
    "id": "400b2f046b565b21",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -272,8 +251,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:08:32.199087Z",
-     "start_time": "2026-02-10T18:08:32.051119Z"
+     "end_time": "2026-02-11T19:56:44.083048Z",
+     "start_time": "2026-02-11T19:56:43.623799Z"
     }
    },
    "cell_type": "code",
@@ -291,7 +270,7 @@
    ],
    "id": "fc36783b0b6f9fca",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -2307,8 +2286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T18:09:00.128876Z",
-     "start_time": "2026-02-10T18:09:00.089288Z"
+     "end_time": "2026-02-11T19:57:40.694944Z",
+     "start_time": "2026-02-11T19:57:40.617026Z"
     }
    },
    "cell_type": "code",
@@ -2318,7 +2297,7 @@
     "                                     end_time=datetime(2026, 1, 1, 12, 00),\n",
     "                                     reader='msi_safe',)\n",
     "print(msi_files)\n",
-    "msi_uncorrected_scn = Scene(filenames=msi_files)\n",
+    "msi_uncorrected_scn = Scene(reader='msi_safe', filenames=msi_files)\n",
     "msi_corrected_scn = Scene(filenames=msi_files)\n",
     "print()\n",
     "print(msi_uncorrected_scn.all_dataset_names())"
@@ -2329,13 +2308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msi_safe': ['/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/MTD_TL.xml', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/MTD_MSIL1C.xml', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B8A.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B08.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B12.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B04.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B01.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B07.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B03.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B09.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B05.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B11.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B02.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B10.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_TCI.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B06.jp2']}\n",
+      "{'msi_safe': ['/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/MTD_TL.xml', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/MTD_MSIL1C.xml', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B04.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B12.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_TCI.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B08.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B10.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B05.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B8A.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B07.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B01.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B11.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B02.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B06.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B09.jp2', '/Users/cwelch/Downloads/S2A_MSIL1C_20260101T125331_N0511_R052_T23KRR_20260101T142917.SAFE/GRANULE/L1C_T23KRR_A054990_20260101T125328/IMG_DATA/T23KRR_20260101T125331_B03.jp2']}\n",
       "\n",
       "['B01', 'B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B09', 'B10', 'B11', 'B12', 'B8A', 'satellite_azimuth_angle', 'satellite_zenith_angle', 'solar_azimuth_angle', 'solar_zenith_angle']\n"
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 10
   },
   {
    "metadata": {
