--- a/sat_data_anlaysis_scratch.ipynb
+++ b/sat_data_anlaysis_scratch.ipynb
@@ -11,8 +11,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T17:08:49.368789Z",
-     "start_time": "2026-02-17T17:08:47.667975Z"
+     "end_time": "2026-02-17T21:07:58.685365Z",
+     "start_time": "2026-02-17T21:07:56.136762Z"
     }
    },
    "cell_type": "code",
@@ -24,101 +24,155 @@
     "import metpy\n",
     "from pathlib import Path\n",
     "\n",
-    "from pyart.default_config import corrected_reflectivity\n",
-    "\n",
-    "from SARS.satellite_data_processor import pixel_selector\n"
+    "from SARS.satellite_data_processor import pixel_selector\n",
+    "from SARS.sat_info import *"
    ],
    "id": "bb3fa4c8ce8696ab",
-   "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-17T17:12:03.673184Z",
-     "start_time": "2026-02-17T17:12:03.668110Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "data_dir = Path('~/Downloads/sars_p1_data/processed_output').expanduser()\n",
-    "corrected_data_paths = sorted(data_dir.glob('*corrected*'))\n",
-    "uncorrected_data_paths = sorted(data_dir.glob('*unc*'))"
-   ],
-   "id": "e9c4b1df09bad7d",
-   "outputs": [],
-   "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-17T20:36:12.705873Z",
-     "start_time": "2026-02-17T20:36:12.701657Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "pixel_data = {}\n",
-    "\n",
-    "for i in range(len(corrected_data_paths)):\n",
-    "    corrected_data_path = corrected_data_paths[i]\n",
-    "    name = corrected_data_paths[i].stem.split('_')[0]\n",
-    "    for pixel_class, lon_lat in sat_pixel_class_points[name].items():\n",
-    "        pixel_data[name][pixel_class] = pixel_selector(ds, lon_lat, radius=1)"
-   ],
-   "id": "17e3c371d5da578",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "noaa20\n",
-      "noaa20\n",
-      "noaa20\n",
-      "noaa20\n",
-      "noaa20\n",
-      "noaa20\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "sentinel2b\n",
-      "terra\n",
-      "terra\n",
-      "terra\n",
-      "terra\n",
-      "terra\n",
-      "terra\n"
+      "\n",
+      "## You are using the Python ARM Radar Toolkit (Py-ART), an open source\n",
+      "## library for working with weather radar data. Py-ART is partly\n",
+      "## supported by the U.S. Department of Energy as part of the Atmospheric\n",
+      "## Radiation Measurement (ARM) Climate Research Facility, an Office of\n",
+      "## Science user facility.\n",
+      "##\n",
+      "## If you use this software to prepare a publication, please cite:\n",
+      "##\n",
+      "##     JJ Helmus and SM Collis, JORS 2016, doi: 10.5334/jors.119\n",
+      "\n"
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T21:07:58.690504Z",
+     "start_time": "2026-02-17T21:07:58.688255Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data_dir = Path('~/Downloads/sars_p1_data/processed_output').expanduser()\n",
+    "corrected_data_paths = sorted(data_dir.glob('*_corrected*'))\n",
+    "uncorrected_data_paths = sorted(data_dir.glob('*_unc*'))\n",
+    "all_data_paths = sorted(data_dir.glob('*'))"
+   ],
+   "id": "e9c4b1df09bad7d",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T21:10:37.159728Z",
+     "start_time": "2026-02-17T21:10:37.155496Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for cd in corrected_data_paths:\n",
+    "    print(cd.stem)"
+   ],
+   "id": "9889587ccd93724b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "noaa20_VIIRS_corrected_A2024129_0730\n",
+      "noaa20_VIIRS_corrected_A2025122_1154\n",
+      "noaa20_VIIRS_corrected_A2025206_1230\n",
+      "sentinel2b_MSI_corrected_T31TFL\n",
+      "sentinel2b_MSI_corrected_T33QXU\n",
+      "sentinel2b_MSI_corrected_T44TMK\n",
+      "sentinel2b_MSI_corrected_T44TML\n",
+      "sentinel2b_MSI_corrected_T44TMM\n",
+      "sentinel2b_MSI_corrected_T44TMN\n",
+      "sentinel2b_MSI_corrected_T44TNN\n",
+      "sentinel2b_MSI_corrected_T44TNP\n",
+      "sentinel2b_MSI_corrected_T44TNQ\n",
+      "terra_MODIS_corrected_A2024129_0500\n",
+      "terra_MODIS_corrected_A2025122_0830\n",
+      "terra_MODIS_corrected_A2025206_0935\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T21:07:59.897545Z",
+     "start_time": "2026-02-17T21:07:58.694834Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for cd in all_data_paths:\n",
+    "    ds = xr.open_dataset(cd)\n",
+    "    lat_min = ds['latitude'].min().item()\n",
+    "    lat_max = ds['latitude'].max().item()\n",
+    "    lon_min = ds['longitude'].min().item()\n",
+    "    lon_max = ds['longitude'].max().item()\n",
+    "    filename = cd.stem\n",
+    "    print(filename, ' ----- longitude min-max ', (lon_min, lon_max) ,  '----- latitude min-max ', (lat_min, lat_max))"
+   ],
+   "id": "3ddf9cb5f55fab6e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "noaa20_VIIRS_corrected_A2024129_0730  ----- longitude min-max  (42.1889533996582, 100.42717742919922) ----- latitude min-max  (20.723142623901367, 66.85254669189453)\n",
+      "noaa20_VIIRS_corrected_A2025122_1154  ----- longitude min-max  (2.699821710586548, 35.45954513549805) ----- latitude min-max  (0.8124733567237854, 25.73977279663086)\n",
+      "noaa20_VIIRS_corrected_A2025206_1230  ----- longitude min-max  (-22.418500900268555, 24.124492645263672) ----- latitude min-max  (32.16093826293945, 58.05730438232422)\n",
+      "sentinel2b_MSI_corrected_T31TFL  ----- longitude min-max  (4.270462580378141, 5.710143809474364) ----- latitude min-max  (45.034468782371384, 46.04599113126821)\n",
+      "sentinel2b_MSI_corrected_T33QXU  ----- longitude min-max  (15.935790531792147, 16.972238649755447) ----- latitude min-max  (16.1836385636381, 17.182528384398143)\n",
+      "sentinel2b_MSI_corrected_T44TMK  ----- longitude min-max  (79.81718690211503, 81.11508775847986) ----- latitude min-max  (39.65602633651644, 40.650586251921716)\n",
+      "sentinel2b_MSI_corrected_T44TML  ----- longitude min-max  (79.80091550558565, 81.11667142084886) ----- latitude min-max  (40.55698074510133, 41.55157444861454)\n",
+      "sentinel2b_MSI_corrected_T44TMM  ----- longitude min-max  (79.7838866295614, 81.11832882715274) ----- latitude min-max  (41.45778911172922, 42.452421020251606)\n",
+      "sentinel2b_MSI_corrected_T44TMN  ----- longitude min-max  (79.76606998037042, 81.1200629289429) ----- latitude min-max  (42.35791028907277, 43.352585256086364)\n",
+      "sentinel2b_MSI_corrected_T44TNN  ----- longitude min-max  (81.00012144247113, 82.35407129292452) ----- latitude min-max  (42.35659673370746, 43.352585256086364)\n",
+      "sentinel2b_MSI_corrected_T44TNP  ----- longitude min-max  (81.0001232177889, 82.37455814213263) ----- latitude min-max  (43.257068727747814, 44.253147487551495)\n",
+      "sentinel2b_MSI_corrected_T44TNQ  ----- longitude min-max  (81.00012507703413, 82.3960230935895) ----- latitude min-max  (44.15739108462406, 45.153567200126105)\n",
+      "terra_MODIS_corrected_A2024129_0500  ----- longitude min-max  (64.01605987548828, 96.58368682861328) ----- latitude min-max  (29.587846755981445, 50.98892593383789)\n",
+      "terra_MODIS_corrected_A2025122_0830  ----- longitude min-max  (54.7029914855957, 120.535400390625) ----- latitude min-max  (53.82910919189453, 77.03337097167969)\n",
+      "terra_MODIS_corrected_A2025206_0935  ----- longitude min-max  (-11.990873336791992, 26.610061645507812) ----- latitude min-max  (38.31342315673828, 60.08816146850586)\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pixel_data = {}\n",
+    "\n",
+    "for i, data_path in enumerate(corrected_data_paths):\n",
+    "\n",
+    "    filename = data_path.stem\n",
+    "    ds = xr.open_dataset(data_path)\n",
+    "\n",
+    "    for pixel_class, lat_lon in satfile_pixel_class_points[filename].items():\n",
+    "        pixel_data[filename][pixel_class] = pixel_selector(ds, lat_lon, radius=1)\n"
+   ],
+   "id": "17e3c371d5da578",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "pixel_data = {\n",
-    "    'terra':{},\n",
-    "    'noaa20':{},\n",
-    "    'sentinel2b':{},\n",
-    "}"
-   ],
+   "source": "",
    "id": "77cad33f9515f16d"
   }
  ],
